<resources>
    <string name="app_name">Shopping Together</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="user_email">Your email: %1$s</string>
    <string name="welcome_to_shopping_list_together">Welcome to Shopping List Together!</string>
    <string name="Logout">Logout</string>
    <string name="prompt_name">Name</string>
    <string name="select_image">Select Image</string>
    <string name="registering">Registering...</string>
    <string name="search_for_a_product">Search for a Product</string>
    <string name="search">Search</string>
    <string name="enter_shopping_list_name">Enter the name of the Shopping List</string>
    <string name="save">Save</string>
</resources>